# jw3_bz

./: 1.txt  GitLab访问说明.md  optimize_translation.py  pyproject.toml  skill_report.db  skill_report_uuid.db  translate_full_pdf.py  使用说明.md  技能增长报告.py  技能增长报告静态站点_需求文档.txt
docs/: CNAME  charts.html  index.html
docs/assets/: deps.js  index.js  main.js  reset.min.css  style.css  vue-app.js
docs/data/: analysis.json  series.js  series.json  skills.js  skills.json  values.js  values.json
src/skill_growth_report/: __init__.py  analyzer.py  build.py  db.py  export.py  models.py  parser.py
src/skill_growth_report/dbkit/: __init__.py  base.py  crud.py  models.py
报告站点/assets/: main.js  style.css
报告站点/data/: analysis.js  analysis.json  series.json  skills.js  skills.json  values.json
