[project]
name = "skill-growth-report"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chiww", email = "chiweiw@foxmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skill-growth-report = "skill_growth_report.build:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
